cluster/apps/flux-system/fluxcd/webhooks/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  hostnames: ["flux-wh.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: external
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
