cluster/apps/flux-system/fluxcd/webhooks/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook
  labels:
    app.kubernetes.io/name: flux
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux-wh.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: flux-webhook
      services:
        - name: webhook-receiver
          port: 80
          namespace: flux-system
  tls: {}
