cluster/apps/flux-system/fluxcd/webhooks/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  labels:
    app.kubernetes.io/name: flux
spec:
  ingressClassName: nginx
  rules:
    - host: &host flux-wh.${SECRET_DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
